View course page done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
 
                 <!-- Search Box -->
-                <form class="form-inline my-2 my-lg-0 w-50 justify-content-lg-center">
+                <form class="form-inline my-2 my-lg-0 w-50 justify-content-md-center">
                     <input class="form-control mr-sm-2 w-75" type="search" placeholder="Search" aria-label="Search"
                         name="search">
                     <button class="btn btn-danger my-2 my-sm-0" type="submit"><i><i
@@ -542,7 +542,7 @@
 
                 <!-- View More Button -->
                 <div class="col mb-3">
-                    <div class="card d-flex align-items-center justify-content-center">
+                    <div class="card h-100 d-flex align-items-center justify-content-center">
                         <a href="#" class="text-center">
                             <i class="h1 fas fa-plus-circle"></i>
                             <h4>View More</h4>
