--- a/course-list.html
+++ b/course-list.html
@@ -64,65 +64,46 @@
             <div class="container">
                 <h4 class="mb-3">My Course</h4>
                 <!-- Display list of purchased course-->
-                <div class="card rounded-0 mb-3">
-                    <div class="row no-gutters align-items-center">
+                <div class="row row-cols-1 row-cols-md-3">
 
-                        <div class="col-md-5">
+                    <!-- Card -->
+                    <div class="col mb-4">
+                        <div class="card">
                             <!-- Course Image -->
-                            <img src="images/courseImages/course1.jpg" class="card-img rounded-0">
-                        </div>
-
-                        <!-- Card body -->
-                        <div class="col-md-7">
-                            <div class="card-body">
-                                <div class="card-title">
+                            <img src="images/courseImages/course1.jpg" class="card-img-top">
+                            <div class="card-body p-3">
+                                <div class="mb-3">
                                     <!-- Course Title -->
-                                    <h4 class="mb-0">
-                                        Music Theory for Electronic Music COMPLETE: Parts 1, 2, & 3
-                                    </h4>
+                                    <h5 class="card-title mb-0">Music Theory for Electronic Music COMPLETE: Parts 1, 2, & 3</h5>
                                     <!-- Facilitator Name -->
                                     <small class="text-muted">By: Jason Allen</small>
                                 </div>
                                 <!-- Course Description -->
-                                <p class="card-text course-description text-justify">
-
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et
-                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                    laboris nisi ut aliquip
-                                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                                    esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                                    qui officia
+                                <p class="card-text course-description">
+                                    This is a longer card with supporting text below as a naturalLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                                     deserunt mollit anim id est laborum.
                                     <br>
-                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                    doloremque laudantium, totam
-                                    rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
-                                    vitae dicta sunt
-                                    explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
-                                    fugit, sed quia
-                                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                                    quisquam est, qui
-                                    dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-                                    eius modi tempora
-                                    incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-                                    veniam, quis nostrum
-                                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                                    consequatur? Quis autem
-                                    vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum
+                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+                                    rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                                    explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                                    dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
+                                    incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+                                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem
+                                    vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
                                     qui dolorem eum fugiat quo voluptas nulla pariatur?
                                 </p>
 
-                                <a href="course.html" class="btn btn-primary">View Course</a>
+                                <a href="course.html" class="btn btn-primary"> View Course </a>
 
                             </div>
                         </div>
-                        <!-- End of Card Body -->
                     </div>
-
                 </div>
+                <!-- End of Card -->
             </div>
 
         </div>
